# UE_STD

./: .gitattributes  .gitignore  GenerateSolution.bat  README.md  Setup.bat  TODO.txt
Engine/: FrontendEngine.build.cs  FrontendEngineMain.build.cs
Engine/Config/: BaseEngine.ini  EngineConfig.build.cs
Engine/Content/: EngineContent.build.cs
Engine/Shaders/: Common.fxh  DeferredLightShader.hlsl  DeferredMaterialShader.hlsl  EngineShaders.build.cs  FXAA.hlsl  MaterialShader.hlsl  PBRCommon.fxh  PixelShader.hlsl  VertexShader.hlsl
Engine/Source/: CommonProject.build.cs  EngineMain.build.cs  EngineSolution.build.cs  UserProject.build.cs  Utils.cs
Engine/Source/Programs/HeaderParser/: .travis.yml  CMakeLists.txt  CMakeSettings.json  HeaderParser.bat  handler.h  main.cc  parser.cc  parser.h  token.h  tokenizer.cc  tokenizer.h
Engine/Source/Programs/HeaderParser/Tasks/: FillContent.cc  FillContent.h
Engine/Source/Runtime/Core/: Core.build.cs
Engine/Source/Runtime/D3D11RHI/: D3D11RHI.build.cs
Engine/Source/Runtime/Engine/: Engine.build.cs
Engine/Source/Runtime/Launch/: Launch.build.cs
Engine/Source/Runtime/RHI/: RHI.build.cs
Engine/Source/Runtime/RenderCore/: RenderCore.build.cs
Engine/Source/Runtime/Renderer/: Renderer.build.cs
Engine/Source/SE1/: Application.cpp  Application.h  MFCApplication.rc  MFCApplication.reg  RCb02332  SE1.build.cs  resource.h
Templates/CodeTemplates/: README.md
UserProject/Game/: FrontendGame.build.cs
UserProject/Game/Config/: DefaultEngine.ini  UserConfig.build.cs
UserProject/Game/Source/: Game.build.cs
(+299 files in other folders)
